--- a/assets/translations/es-ES.json
+++ b/assets/translations/es-ES.json
@@ -26,5 +26,7 @@
   "badcerticate": "Bad Certificate",
   "start_session": "Iniciar Sesion",
   "text_password": "Contraseña",
-  "text_email": "Correo Electrónico"
+  "text_email": "Correo Electrónico",
+  "user_name_error": "Error en el campo usuario",
+  "password_error": "Error en el campo contraseña"
 }
