--- a/assets/translations/en-US.json
+++ b/assets/translations/en-US.json
@@ -28,5 +28,7 @@
   "text_password": "Password",
   "text_email": "Email",
   "user_name_error": "Error in user field",
-  "password_error": "Error in password field"
+  "password_error": "Error in password field",
+  "text_start_init": "Admission Test"
+
 }
