--- a/assets/translations/en-US.json
+++ b/assets/translations/en-US.json
@@ -32,6 +32,7 @@
   "text_start_init": "Admission Test",
   "search_hint": "Search...",
   "search_label": "Product search",
-  "view_detail": "View More"
+  "view_detail": "View More",
+  "view_detail_product": "Detail product"
 
 }
