--- a/assets/translations/es-ES.json
+++ b/assets/translations/es-ES.json
@@ -32,5 +32,6 @@
   "text_start_init": "Pruebas de Ingreso",
   "search_hint": "Buscar...",
   "search_label": "Buscar Producto",
-  "view_detail": "Ver Detalles"
+  "view_detail": "Ver Detalles",
+  "view_detail_product": "Detalle del producto"
 }
