--- a/assets/translations/en-US.json
+++ b/assets/translations/en-US.json
@@ -33,6 +33,6 @@
   "search_hint": "Search...",
   "search_label": "Product search",
   "view_detail": "View More",
-  "view_detail_product": "Detail product"
+  "detail_product": "Detail product"
 
 }
