--- a/assets/translations/es-ES.json
+++ b/assets/translations/es-ES.json
@@ -40,5 +40,6 @@
   "text_category": "Categoria: ",
   "not_never_data": "No hay datos disponibles en tu dispositivo.",
   "synchronize_now": "Sicronizar Ahora",
-  "yuo_want_update": "Deseas actualizar o sincronizar los datos."
+  "yuo_want_update": "Deseas actualizar o sincronizar los datos.",
+  "not_found_search": "No se hay resultados."
 }
